--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>吐槽 Amos 吧</title>
+  <title>X播管理系統</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
